include/altdss/capi/dss.h

    /*! 
    Complex array of sequence powers (kW, kvar) into each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqPowers(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_SeqPowers but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqPowers_GR(void);
    /*! 
    Double array of symmetrical component voltages (magnitudes only) at each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqVoltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_SeqVoltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqVoltages_GR(void);
    ALTDSS_CAPI_DLL void CktElement_Close(int32_t Term, int32_t Phs);
    ALTDSS_CAPI_DLL void CktElement_Open(int32_t Term, int32_t Phs);
    /*! 
    Emergency Ampere Rating
    */
    ALTDSS_CAPI_DLL void CktElement_Set_EmergAmps(double Value);
    /*! 
    Boolean indicating that element is currently in the circuit.
    */
    ALTDSS_CAPI_DLL void CktElement_Set_Enabled(uint16_t Value);
    /*! 
    Normal ampere rating
    */
    ALTDSS_CAPI_DLL void CktElement_Set_NormalAmps(double Value);
    ALTDSS_CAPI_DLL uint16_t CktElement_IsOpen(int32_t Term, int32_t Phs);
    /*! 
    Array containing all property names of the active device.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of Properties this Circuit Element.
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumProperties(void);
    /*! 
    Residual currents for each terminal: (magnitude, angle in degrees)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Residuals(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Residuals but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Residuals_GR(void);
    /*! 
    YPrim matrix, column order, complex numbers (paired)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Yprim(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Yprim but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Yprim_GR(void);
    /*! 
    Display name of the object (not necessarily unique)
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_DisplayName(void);
    /*! 
    globally unique identifier for this object
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_GUID(void);
    /*! 
    Pointer to this object
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_Handle(void);
    /*! 
    Display name of the object (not necessarily unique)
    */
    ALTDSS_CAPI_DLL void CktElement_Set_DisplayName(const char* Value);
    /*! 
    Full name of the i-th controller attached to this element. Ex: str = Controller(2).  See NumControls to determine valid index range
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_Controller(int32_t idx);
    /*! 
    Name of the Energy Meter this element is assigned to.
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_EnergyMeter(void);
    /*! 
    This element has a CapControl or RegControl attached.
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_HasVoltControl(void);
    /*! 
    This element has a SwtControl attached.
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_HasSwitchControl(void);
    /*! 
    Complex double array of Sequence Voltage for all terminals of active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultDims);