src/CAPI/CAPI_CktElement.pas


procedure CktElement_Get_SeqPowers_GR(); CDECL;
// Same as CktElement_Get_SeqPowers but uses global result (GR) pointers
begin
    CktElement_Get_SeqPowers(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure CktElement_Get_SeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// All voltages of active circuit element
// magnitude only
// returns a set of seq voltages (3) for each terminal
// 0, 1, 2 sequence  (0, +, -)
var
    Result: PDoubleArray0;
    i: Integer;
    V012: pComplexArray;
    S: String;
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) 
        or MissingSolution(DSSPrime) 
        or (not elem.Enabled)
        or (elem.NodeRef = NIL) 
    then
        Exit;

    try
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 3 * elem.NTerms, 3, elem.NTerms);

        V012 := Allocmem(sizeof(Complex) * 3 * elem.Nterms);
        // get complex seq voltages
        CalcSeqVoltages(elem, V012);
        // return 0 based array
        for i := 1 to 3 * elem.Nterms do
            Result[i - 1] := Cabs(V012[i]);  // return mag only

        Reallocmem(V012, 0);  // throw away temp memory

    except
        On E: Exception do
        begin
            S := E.message + CRLF +
                'Element=' + elem.Name + CRLF +
                'Nphases=' + IntToStr(elem.Nphases) + CRLF +
                'NTerms=' + IntToStr(elem.NTerms) + CRLF +
                'NConds =' + IntToStr(elem.NConds);
            DoSimpleMsg(DSSPrime, S, 5012);
        end;
    end;
end;

procedure CktElement_Get_SeqVoltages_GR(); CDECL;
// Same as CktElement_Get_SeqVoltages but uses global result (GR) pointers
begin
    CktElement_Get_SeqVoltages(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure CktElement_Close(Term, Phs: Integer); CDECL;
var
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    //TODO: why is this changing ActiveTerminal directly?
    elem.ActiveTerminal := @elem.Terminals[Term - 1];
    elem.Closed[Phs] := TRUE;
end;
//------------------------------------------------------------------------------
procedure CktElement_Open(Term, Phs: Integer); CDECL;
var
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    //TODO: why is this changing ActiveTerminal directly?
    elem.ActiveTerminal := @elem.Terminals[Term - 1];
    elem.Closed[Phs] := FALSE;
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_EmergAmps(Value: Double); CDECL;
var
    elem: TDSSCktElement;
    pd: TPDElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if IsPDElement(elem) then
    begin
        pd := elem as TPDElement;
        pd.EmergAmps := Value;
    end;
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_Enabled(Value: TAPIBoolean); CDECL;
var
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;
    elem.Enabled := Value;
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_NormalAmps(Value: Double); CDECL;
var
    elem: TDSSCktElement;
    pd: TPDElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if IsPDElement(elem) then
    begin
        pd := elem as TPDElement;
        pd.NormAmps := Value;
    end;
end;
//------------------------------------------------------------------------------
function CktElement_IsOpen(Term, Phs: Integer): TAPIBoolean; CDECL;
var
    i: Integer;
    elem: TDSSCktElement;
begin
    Result := False;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;
    
    //TODO: why is this changing ActiveTerminal directly?
    elem.ActiveTerminal := @elem.Terminals[Term - 1];
    if Phs = 0 then // At least one must be open
    begin
        Result := FALSE;
        for i := 1 to elem.NConds do
            if not elem.Closed[i] then
            begin
                Result := TRUE;
                Exit;
            end;
    end
    else // Check a specific phase or conductor
        Result := not elem.Closed[Phs];
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_AllPropertyNames(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
    Result: PPAnsiCharArray0;
    k: Integer;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount, '');
        Exit;
    end;
    
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, elem.ParentClass.NumProperties);
    for k := 1 to elem.ParentClass.NumProperties do
    begin
        Result[k - 1] := DSS_CopyStringAsPChar(elem.ParentClass.PropertyName[k]);
    end;
end;

procedure CktElement_Get_AllPropertyNames_GR(); CDECL;
// Same as CktElement_Get_AllPropertyNames but uses global result (GR) pointers
begin
    CktElement_Get_AllPropertyNames(DSSPrime.GR_DataPtr_PPAnsiChar, @DSSPrime.GR_Counts_PPAnsiChar[0])
end;

//------------------------------------------------------------------------------
function CktElement_Get_NumProperties(): Integer; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := 0;
    
    if InvalidCktElement(DSSPrime, elem) then
        Exit;
    
    Result := elem.ParentClass.NumProperties;
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_Residuals(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    cBuffer: pComplexArray;
    iV, i, j, k: Integer;
    cResid: Complex;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.NTerms, 2, elem.NTerms);    // 2 values per terminal
    cBuffer := Allocmem(sizeof(Complex) * elem.Yorder);
    elem.GetCurrents(cBuffer);
    iV := 0;
    for i := 1 to elem.NTerms do
    begin
        cResid := 0;
        k := (i - 1) * elem.Nconds;
        for j := 1 to elem.Nconds do
        begin
            inc(k);
            cResid += CBuffer[k];
        end;
        Result[iV] := Cabs(cResid);
        Inc(iV);
        Result[iV] := CDang(cResid);
        Inc(iV);
    end;
    Reallocmem(cBuffer, 0);
end;

procedure CktElement_Get_Residuals_GR(); CDECL;
// Same as CktElement_Get_Residuals but uses global result (GR) pointers
begin
    CktElement_Get_Residuals(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure CktElement_Get_Yprim(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    cValues: pComplexArray;
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    cValues := elem.GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
    if cValues = NIL then 
        Exit;

    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.Yorder * elem.Yorder, elem.Yorder, elem.Yorder);
    Move(cValues^, ResultPtr^, ResultCount^ * SizeOf(Double));
end;

procedure CktElement_Get_Yprim_GR(); CDECL;
// Same as CktElement_Get_Yprim but uses global result (GR) pointers
begin
    CktElement_Get_Yprim(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function CktElement_Get_DisplayName(): PAnsiChar; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := NIL;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if elem.DisplayName <> '' then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.DisplayName)
    else
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.ParentClass.Name + '_' + elem.Name);
end;

//------------------------------------------------------------------------------
function CktElement_Get_GUID(): PAnsiChar; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := NIL;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;
    Result := DSS_GetAsPAnsiChar(DSSPrime, elem.ID)
end;

//------------------------------------------------------------------------------
function CktElement_Get_Handle(): Integer; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := 0;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;
    Result := elem.Handle
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_DisplayName(const Value: PAnsiChar); CDECL;
var
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    elem.DisplayName := Value;
end;
//------------------------------------------------------------------------------
function CktElement_Get_Controller(idx: Integer): PAnsiChar; CDECL;
var
    elem: TDSSCktElement;
    ctrl: TDSSCktElement;
begin
    Result := NIL;

    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if (idx > 0) and (idx <= elem.ControlElementList.Count) then
    begin
        ctrl := elem.ControlElementList.Get(idx);
        if ctrl <> NIL then
            Result := DSS_GetAsPAnsiChar(DSSPrime, ctrl.FullName);
    end;
end;
//------------------------------------------------------------------------------
function CktElement_Get_EnergyMeter(): PAnsiChar; CDECL;
var
    pd: TPDElement;
    elem: TDSSCktElement;
begin
    Result := NIL;

    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if Flg.HasEnergyMeter in elem.Flags then
    begin
        pd := elem as TPDElement;
        Result := DSS_GetAsPAnsiChar(DSSPrime, pd.MeterObj.Name);
    end;
end;
//------------------------------------------------------------------------------
function CktElement_Get_HasVoltControl(): TAPIBoolean; CDECL;
// Returns true if any of the controls is a capcontrol or a regcontrol
var
    ctrl: TDSSCktElement;
    elem: TDSSCktElement;
begin
    Result := FALSE;

    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    for ctrl in elem.ControlElementlist do
    begin
        case (ctrl.DSSObjType and CLASSMASK) of
            CAP_CONTROL,
            REG_CONTROL:
            begin
                Result := TRUE;
                Exit;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
function CktElement_Get_HasSwitchControl(): TAPIBoolean; CDECL;
var
    ctrl: TDSSCktElement;
    elem: TDSSCktElement;
begin
    Result := FALSE;

    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    for ctrl in elem.ControlElementList do
    begin
        case (ctrl.DSSObjType and CLASSMASK) of
            SWT_CONTROL:
            begin
                Result := TRUE;
                Exit;
            end;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_CplxSeqVoltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    S: String;
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);

    if InvalidCktElement(DSSPrime, elem) 
        or MissingSolution(DSSPrime) 
        or (not elem.Enabled) 
        or (elem.NodeRef = NIL)
     then
        Exit;

    try
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * 3 * elem.NTerms, 3, elem.NTerms);
        CalcSeqVoltages(elem, pComplexArray(ResultPtr));
